say-service/src/main/fabric8/svc.yml
apiVersion: v1
kind: Service
name: ${project.artifactId}
spec:
  type: NodePort
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8090
  selector:
    app: say-service
